--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabricator-dna",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Fabricator module that creates a dependency tracker.",
   "main": "index.js",
   "scripts": {
@@ -23,9 +23,7 @@
   "homepage": "https://github.com/camdagr8/fabricator-dna#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
-  },
-  "dependencies": {
+    "mocha": "^3.2.0",
     "fs": "0.0.1-security",
     "globby": "^6.1.0",
     "gray-matter": "^2.1.0",
